# WebIDE

./: README.md  README_CN.md  settings.gradle.kts
.github/workflows/: android.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: init.sh  webapp_1.0.apk
app/src/main/assets/docs/: js接口文档.md
app/src/main/assets/textmate/: languages.json
app/src/main/assets/textmate/cpp/: language-configuration.json
app/src/main/assets/textmate/java/: language-configuration.json
app/src/main/assets/textmate/markdown-basics/: language-configuration.json
app/src/main/assets/textmate/php/: language-configuration.json
app/src/main/assets/textmate/typescript/: language-configuration.json
app/src/main/assets/textmate/typescript-basics/: language-configuration.json
app/src/main/java/com/web/webide/: App.kt  MainActivity.kt
app/src/main/java/com/web/webide/core/utils/: BackupUtils.kt  CodeFormatter.kt  LogConfig.kt  PermissionManager.kt  ThemeDataStore.kt  WelcomePreferences.kt  WorkspaceManager.kt
app/src/main/java/com/web/webide/files/: FileTree.kt
app/src/main/java/com/web/webide/lsp/: ProotStreamConnectionProvider.kt
app/src/main/java/com/web/webide/ui/: ThemeViewModel.kt
app/src/main/java/com/web/webide/ui/components/: ColorPickerDialog.kt  DirectorySelector.kt
app/src/main/res/drawable/: ic_command.xml
app/src/main/res/raw/: aboutlibraries.json
app/src/main/res/values/: themes.xml
core/components/: build.gradle.kts
core/main/: build.gradle.kts
core/main/src/main/java/com/rk/settings/: Settings.kt
core/main/src/main/java/com/rk/terminal/: App.kt
core/resources/: build.gradle.kts
core/terminal-emulator/: build.gradle
core/terminal-emulator/src/main/jni/: termux.c
editor/: build.gradle.kts
editor-lsp/: build.gradle.kts
editor-lsp/src/main/res/drawable/: icon_arrow_down.xml  icon_arrow_up.xml
editor-lsp/src/main/res/values/: colors.xml
gradle/: libs.versions.toml
language-treesitter/: .gitignore  build.gradle.kts
language-treesitter/src/main/cpp/: CMakeLists.txt
language-treesitter/src/main/cpp/jni/: ts_css_jni.c  ts_html_jni.c  ts_javascript_jni.c
web-bridge/: build.gradle.kts
web-bridge/src/main/java/rrzt/web/web_bridge/: BluetoothManager.kt  WebsApiAdapter.kt
webapp/: build.gradle.kts
webapp/src/main/assets/: index.html
webapp/src/main/cpp/: CMakeLists.txt  native-lib.cpp  vm_defs.h
webapp/src/main/java/com/web/webapp/: MainActivity.java
(+68 files in other folders)
